# rprogrammingllama

./: .gitignore  LICENSE  README.md  evaluator.py  frontend.py  main.py  pyproject.toml  trainer.py
.github/workflows/: ci.yml
r_model/: README.md  adapter_config.json
results/checkpoint-1000/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
results/checkpoint-1064/: adapter_config.json  adapter_model.safetensors  optimizer.pt  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
tests/: test_evaluator.py  test_frontend.py  test_trainer.py
